<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeTextView"
        android:text="@string/welcome_to_android"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/custom_1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usrTextView"
        android:text="@string/welcome_user"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
        style="@style/custom_1"
        />

    <ImageView
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usrTextView"
        android:src="@drawable/ic_launcher_background"
        android:id="@+id/imgView"
        android:contentDescription="@string/welcome_image"
        style="@style/custom_1"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgView"
        android:hint="@string/password"
        style="@style/custom_1"
        android:inputType="numberPassword"
        />

</androidx.constraintlayout.widget.ConstraintLayout>