<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/assignment_constraint_layout"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/logoImgView"
        android:contentDescription="@string/logo_of_company"

        />
<!--company name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImgView"
        android:text="@string/welcome_to_bitcode"
        android:textAlignment="center"
        style="@style/assignment_constraint_layout"
        android:id="@+id/titleTextView"
        android:textSize="40sp"

        />
    <!--enquiry form-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:text="@string/enquire_form"
        android:textAlignment="center"
        style="@style/assignment_constraint_layout"
        android:id="@+id/enquireTextView"
        android:textSize="30sp"

        />
<!--name sector-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enquireTextView"
        android:text="@string/name"
        style="@style/assignment_constraint_layout"
        android:layout_marginTop="30dp"
        android:id="@+id/nameTextView"
        android:textSize="@dimen/textsize"


        />

    <EditText
        style="@style/assignment_constraint_layout"
        android:layout_width="296dp"
        android:layout_height="@dimen/height_Edit_View"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toRightOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/enquireTextView"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:id="@+id/nameEditView"
        android:background="@drawable/boarder_input"

        />
<!--phone number-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        android:text="@string/phone_no"
        style="@style/assignment_constraint_layout"
        android:layout_marginTop="30dp"
        android:id="@+id/phoneTextView"
        android:textSize="@dimen/textsize"


        />

    <EditText
        android:id="@+id/phoneEditView"
        style="@style/assignment_constraint_layout"
        android:layout_width="267dp"
        android:layout_height="@dimen/height_Edit_View"
        android:autofillHints="phone"
        android:inputType="phone"
        app:layout_constraintLeft_toRightOf="@+id/phoneTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameEditView"
        android:background="@drawable/boarder_input"

        />


    <!--email adresss-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
        android:text="@string/email"
        style="@style/assignment_constraint_layout"
        android:layout_marginTop="30dp"
        android:id="@+id/emailTextView"
        android:textSize="@dimen/textsize"

        />

    <EditText
        android:id="@+id/emailEditView"
        style="@style/assignment_constraint_layout"
        android:layout_width="267dp"

        android:layout_height="@dimen/height_Edit_View"
        android:autofillHints="phone"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toRightOf="@+id/emailTextView"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditView"
        android:background="@drawable/boarder_input"

        />

<!--home adress-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView"
        android:text="@string/address"
        style="@style/assignment_constraint_layout"
        android:layout_marginTop="30dp"
        android:id="@+id/adressTextView"
        android:textSize="@dimen/textsize"

        />

    <EditText
        android:id="@+id/adressEditView"
        style="@style/assignment_constraint_layout"
        android:layout_width="267dp"
        android:layout_height="@dimen/height_Edit_View"
        android:autofillHints="postalAddress"
        android:inputType="textPostalAddress"
        app:layout_constraintLeft_toRightOf="@+id/adressTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailEditView"
        android:background="@drawable/boarder_input"

        />

<!--college name-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adressTextView"
        android:text="@string/college_name"
        style="@style/assignment_constraint_layout"
        android:layout_marginTop="30dp"
        android:id="@+id/collgeTextView"
        android:textSize="@dimen/textsize"

        />

    <EditText
        android:id="@+id/collgeEditView"
        style="@style/assignment_constraint_layout"
        android:layout_width="239dp"
        android:layout_height="@dimen/height_Edit_View"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@+id/collgeTextView"
        app:layout_constraintTop_toBottomOf="@+id/adressEditView"
        android:background="@drawable/boarder_input"

        />

<!--technology-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/collgeTextView"
        android:text="@string/technology"
        style="@style/assignment_constraint_layout"
        android:layout_marginTop="30dp"
        android:id="@+id/techTextView"
        android:textSize="@dimen/textsize"

        />

    <EditText
        android:id="@+id/techEditView"
        style="@style/assignment_constraint_layout"
        android:layout_width="239dp"
        android:layout_height="@dimen/height_Edit_View"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintLeft_toRightOf="@+id/techTextView"
        app:layout_constraintTop_toBottomOf="@+id/collgeEditView"
        android:background="@drawable/boarder_input"

        />

<!--year of passing-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/techTextView"
        android:text="@string/year_n_of_passing"
        style="@style/assignment_constraint_layout"
        android:layout_marginTop="30dp"
        android:id="@+id/yearTextView"
        android:textSize="@dimen/textsize"

        />

    <EditText
        android:id="@+id/yearEditView"
        style="@style/assignment_constraint_layout"
        android:layout_width="239dp"
        android:layout_height="@dimen/height_Edit_View"
        android:autofillHints="name"
        android:inputType="date"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="@+id/yearTextView"
        app:layout_constraintTop_toBottomOf="@+id/techEditView"
        android:background="@drawable/boarder_input"

        />

<!--submit button-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/yearEditView"
        app:layout_constraintLeft_toRightOf="@id/yearTextView"
        android:text="@string/submit"
        android:textSize="@dimen/textsize"
        android:textAlignment="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="30dp"
        style="@style/assignment_constraint_layout"

        />



</androidx.constraintlayout.widget.ConstraintLayout>